--- a/Capitoli/metodiTradizionali.tex
+++ b/Capitoli/metodiTradizionali.tex
@@ -24,8 +24,8 @@ Versatile Video Coding (VVC) o H.266 è lo standard di codifica video più recen
 Sebbene sia stato sviluppato per la compressione video, fornisce ottimi risultati anche per la compressione di immagini con metodo intra.\\
 Come il suo predecessore, H.266 utilizza tecniche di predizione spaziale intra-frame e blocchi a dimensione variabile. A differenza del suo predecessore però le tecniche di predizione sono molte di più e più elaborate, e la dimensione di blocco può variare con più libertà.
 La trasformata e la codifica entropica rimangono simili ai metodi precedenti, ma utilizzano degli algoritmi più avanzati.\\
-L’algoritmo di codifica VVC rappresenta l’attuale stato dell’arte per la compressione di video ed immagini, ne possiamo vedere un esempio nella figura \ref{fig:CompressionVVC}
-\newline
+L’algoritmo di codifica VVC rappresenta l’attuale stato dell’arte per la compressione di video ed immagini, ne possiamo vedere un esempio nella figura \ref{fig:CompressionVVC}\\
+\newpage
 
 \begin{figure}[h!]
     \centering
@@ -61,6 +61,7 @@ L’algoritmo di codifica VVC rappresenta l’attuale stato dell’arte per la c
     \label{fig:CompressionJPEG2000}
 \end{figure}
 
+\newpage
 \begin{figure}[h!]
     \centering
     \begin{subfigure}[]{0.3\textwidth}
