--- a/Capitoli/valutazionePrestazioni.tex
+++ b/Capitoli/valutazionePrestazioni.tex
@@ -169,6 +169,7 @@ L’ultimo livello di qualità invece si ha per $0.41bpp$ dove però non abbiamo
     \caption{Tempi di compressione a 0.41 bpp}
     \label{fig:times41}
 \end{figure}
+\newpage
 \clearpage 
 Come possiamo osservare nei grafici i tempi di compressione delle reti aumentano all’aumentare della qualità, i tempi di compressione dei metodi tradizionali invece non variano sensibilmente all’aumentare della qualità. Il codec VVC costituisce però un’eccezione a questo comportamento costante dei metodi tradizionali, in quanto possiamo vedere che il tempo aumenta all’aumentare della qualità. Questo comportamento si ha per la complessità di H.266, in quanto deve trovare il miglior metodo di compressione tra quelli a sua disposizione.\\
 Passiamo ora a presentare le metriche di qualità dell’immagine, partiamo dal grafico del PSNR \ref{fig:PSNRGraph}, come possiamo vedere nel grafico, la migliore qualità di compressione si ha con il codec VVC, seguito poi da Cheng 2020, Ballé 2018, BPG, JPEG 2000 ed infine JPEG. H.266 si conferma quindi l’attuale stato dell’arte per la compressione di immagini osservando il grafico del PSNR, che ricordiamo essere una metrica oggettiva.\\
