Fixed image credits for autoencoder sheme image

--- a/Capitoli/metodiIntelligenti.tex
+++ b/Capitoli/metodiIntelligenti.tex
@@ -19,7 +19,7 @@ Gli autoencoder non sono però sufficienti per costruire un algoritmo di compres
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.5\textwidth]{Immagini/Autoencoder_scheme.png}
-    \caption{Diagramma generico di un autoencoder}
+    \caption{Diagramma generico di un autoencoder, immagine presa dal documento \cite{mishra2022deep}}
     \label{fig:modelloAutoencoder}
 \end{figure}
 \section{Reti di Compressione}
