--- a/Capitoli/valutazionePrestazioni.tex
+++ b/Capitoli/valutazionePrestazioni.tex
@@ -1,8 +1,9 @@
 \chapter{Valutazione delle prestazioni}
-In questo capitolo vogliamo comparare gli algoritmi tradizionali descritti nel capitolo 1 con due degli algoritmi descritti nel capitolo 2, nello specifico Ballè et al. \cite{minnen2018joint} e Cheng et al. \cite{cheng2020learned}. Purtroppo non siamo stati in grado di testare anche Wang et al. \cite{wang2022neural} in quanto, nonostante abbiano reso il modello disponibile, non ne hanno fornito una versione pre addestrata.\\
+In questo capitolo vogliamo comparare gli algoritmi tradizionali descritti nel capitolo 1 con due degli algoritmi descritti nel capitolo 2, nello specifico Ballé et al. \cite{minnen2018joint} e Cheng et al. \cite{cheng2020learned}. Purtroppo non siamo stati in grado di testare anche Wang et al. \cite{wang2022neural} in quanto, nonostante abbiano reso il modello disponibile, non ne hanno fornito una versione pre addestrata.\\
 L’hardware su cui sono stati eseguiti i test è un computer dotato di processore AMD Ryzen 5 5600X con 6 core e 12 thread a 3.7GHz, munito di 16GB di ram DDR4 a 3200MHz e come sistema operativo una distribuzione Fedora Linux 38 con kernel linux 6.5.7-200. Vogliamo sottolineare anche che per realizzare delle misurazioni più vicine alla realtà possibili abbiamo deciso di non utilizzare GPU, in quanto non tutti i computer sono dotati di GPU su cui è possibile eseguire Tensorflow o PyTorch e non abbiamo preso particolari precauzioni per garantire l’esecuzione esclusiva del codice, abbiamo lasciato che il codice concorresse con il sistema operativo e le applicazioni in background per l’allocazione del processore, tutto per simulare un ambiente più simile ad un caso reale.\\
 Per effettuare i vari test sono stati realizzati dei notebook in python 3.11 su jupyterlab 4.0.7. I codificatori che abbiamo utilizzato sono i seguenti. Per comprimere le immagini con JPEG abbiamo utilizzato Pillow 10.0.1 \cite{PillowLibrary} sviluppato da Jeffrey A. Clark. Per comprimere le immagini con JPEG2000 abbiamo utilizzato OpenJPEG 2.5.0 \cite{OpenJPEGLibrary} sviluppato dall’ Université de Louvain. Per comprimere con BPG abbiamo usato il framework messo a disposizione da F.Bellard \cite{BPGImageformat} nella versione 0.9.8. Per comprimere con VVC abbiamo usato il framework distribuito da Fraunhofer HHI \cite{VVCLibrary} che comprende l’encoder vvencapp 1.9.1 e il decocder vvdecapp 2.1.2. Per comprimere con le due reti abbiamo utilizzato la libreria compressai 1.2.4 \cite{CompressAILibrary} in cui sono presenti le implementazioni pre allenate dei due modelli che ci interessano. Dei due modelli sono presenti due versioni, per Ballé et al. \cite{minnen2018joint} è fornita un implementazione in cui la media della distribuzione gaussiana viene bloccata a 0 e una in cui la media è un parametro determinato durante la compressione, per Cheng at al. 2020 \cite{cheng2020learned} viene fornita una versione che fa uso degli attention module e una in cui sono disabilitati.\\
-Per valutare i vari metodi abbiamo utilizzato 24 immagini non compresse di dimensione $2048\:x\:3072$ con spazio di colore RGB a 8 bit per canale, prese dal database di Kodak \cite{KodakDataset}. I vari algoritmi sono stati eseguiti più volte con vari livelli di qualità, che andremo ad approfondire successivamente, ed infine sono state calcolate le metriche sui risultati ottenuti.\\
+Per valutare i vari metodi abbiamo utilizzato 24 immagini non compresse di dimensione $2048\:x\:3072$ con spazio di colore RGB a 8 bit per canale, prese dal database di Kodak \cite{KodakDataset}, abbiamo deciso di utilizzare questo dataset in quanto è il dataset maggiormete utilizzato dalla comunità scientifica per valutare le prestazioni di algoritmi che lavorano su immagini.\\
+I vari algoritmi sono stati eseguiti più volte con vari livelli di qualità, che andremo ad approfondire successivamente, ed infine sono state calcolate le metriche sui risultati ottenuti.\\
 
 \section{Metriche utlizzate}
 Per valutare le prestazioni facciamo affidamento ad alcune metriche che ci permettono di confrontare le varie tecniche. Molte di queste metriche sono oggettive, alcune invece cercano di quantificare il più fedelmente possibile quella che è la qualità percepita da un osservatore umano.
